fix node-exporter ServiceMonitor

--- a/k8s/monitoring/node-exporter/helm/values.yaml
+++ b/k8s/monitoring/node-exporter/helm/values.yaml
@@ -117,8 +117,7 @@ prometheus:
 
     ## Override serviceMonitor selector
     ##
-    selectorOverride:
-      app.kubernetes.io/name: node-exporter
+    selectorOverride: {}
 
     ## Attach node metadata to discovered targets. Requires Prometheus v2.35.0 and above.
     ##
