--- a/k8s/monitoring/node-exporter/generated.yaml
+++ b/k8s/monitoring/node-exporter/generated.yaml
@@ -174,7 +174,8 @@ spec:
   
   selector:
     matchLabels:
-      app.kubernetes.io/name: node-exporter
+      app.kubernetes.io/name: prometheus-node-exporter
+      app.kubernetes.io/instance: node-exporter
   attachMetadata:
     node: false
   endpoints:
