--- a/k8s/monitoring/prometheus-adapter/generated.yaml
+++ b/k8s/monitoring/prometheus-adapter/generated.yaml
@@ -97,6 +97,46 @@ data:
         matches: ^(.*)_seconds_total$
         as: ""
       metricsQuery: sum(rate(<<.Series>>{<<.LabelMatchers>>}[5m])) by (<<.GroupBy>>)
+    resourceRules:
+      cpu:
+        containerLabel: container
+        containerQuery: |
+          sum by (<<.GroupBy>>) (
+            rate(container_cpu_usage_seconds_total{container!="",<<.LabelMatchers>>}[3m])
+          )
+        nodeQuery: |
+          sum  by (<<.GroupBy>>) (
+            rate(node_cpu_seconds_total{mode!="idle",mode!="iowait",mode!="steal",<<.LabelMatchers>>}[3m])
+          )
+        resources:
+          overrides:
+            namespace:
+              resource: namespace
+            node:
+              resource: node
+            pod:
+              resource: pod
+      memory:
+        containerLabel: container
+        containerQuery: |
+          sum by (<<.GroupBy>>) (
+            avg_over_time(container_memory_working_set_bytes{container!="",<<.LabelMatchers>>}[3m])
+          )
+        nodeQuery: |
+          sum by (<<.GroupBy>>) (
+            avg_over_time(node_memory_MemTotal_bytes{<<.LabelMatchers>>}[3m])
+            -
+            avg_over_time(node_memory_MemAvailable_bytes{<<.LabelMatchers>>}[3m])
+          )
+        resources:
+          overrides:
+            namespace:
+              resource: namespace
+            node:
+              resource: node
+            pod:
+              resource: pod
+      window: 3m
 ---
 # Source: prometheus-adapter/templates/cluster-role-resource-reader.yaml
 apiVersion: rbac.authorization.k8s.io/v1
@@ -143,6 +183,31 @@ rules:
   resources: 
   - '*'
   verbs: ["*"]
+---
+# Source: prometheus-adapter/templates/resource-metrics-cluster-role.yaml
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  labels:    
+    helm.sh/chart: prometheus-adapter-4.9.0
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/component: metrics
+    app.kubernetes.io/part-of: prometheus-adapter
+    app.kubernetes.io/name: prometheus-adapter
+    app.kubernetes.io/instance: prometheus-adapter
+    app.kubernetes.io/version: "v0.11.2"
+  name: prometheus-adapter-metrics
+rules:
+- apiGroups:
+  - ""
+  resources:
+  - pods
+  - nodes
+  - nodes/stats
+  verbs:
+  - get
+  - list
+  - watch
 ---
 # Source: prometheus-adapter/templates/cluster-role-binding-auth-delegator.yaml
 apiVersion: rbac.authorization.k8s.io/v1
@@ -205,6 +270,28 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: prometheus-adapter-server-resources
+subjects:
+- kind: ServiceAccount
+  name: prometheus-adapter
+  namespace: "default"
+---
+# Source: prometheus-adapter/templates/resource-metrics-cluster-role-binding.yaml
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  labels:    
+    helm.sh/chart: prometheus-adapter-4.9.0
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/component: metrics
+    app.kubernetes.io/part-of: prometheus-adapter
+    app.kubernetes.io/name: prometheus-adapter
+    app.kubernetes.io/instance: prometheus-adapter
+    app.kubernetes.io/version: "v0.11.2"
+  name: prometheus-adapter-hpa-controller-metrics
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: prometheus-adapter-metrics
 subjects:
 - kind: ServiceAccount
   name: prometheus-adapter
@@ -294,7 +381,7 @@ spec:
         app.kubernetes.io/version: "v0.11.2"
       name: prometheus-adapter
       annotations:
-        checksum/config: 2eb83af6ab50bbef7056ba2d1711f71a5185960d41696fa557a46fca8c4abb3c
+        checksum/config: cd92813a0a50fee33b2aac8096f4c02f1aa21234b57cb223d6700af97f583928
     spec:
       serviceAccountName: prometheus-adapter
       containers:
@@ -377,6 +464,29 @@ spec:
     name: prometheus-adapter
     namespace: "default"
   group: custom.metrics.k8s.io
+  version: v1beta1
+  insecureSkipTLSVerify: true
+  groupPriorityMinimum: 100
+  versionPriority: 100
+---
+# Source: prometheus-adapter/templates/resource-metrics-apiservice.yaml
+apiVersion: apiregistration.k8s.io/v1
+kind: APIService
+metadata:
+  labels:    
+    helm.sh/chart: prometheus-adapter-4.9.0
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/component: metrics
+    app.kubernetes.io/part-of: prometheus-adapter
+    app.kubernetes.io/name: prometheus-adapter
+    app.kubernetes.io/instance: prometheus-adapter
+    app.kubernetes.io/version: "v0.11.2"
+  name: v1beta1.metrics.k8s.io
+spec:
+  service:
+    name: prometheus-adapter
+    namespace: "default"
+  group: metrics.k8s.io
   version: v1beta1
   insecureSkipTLSVerify: true
   groupPriorityMinimum: 100
