--- a/k8s/monitoring/prometheus/prometheus.yaml
+++ b/k8s/monitoring/prometheus/prometheus.yaml
@@ -30,8 +30,8 @@ spec:
   resources:
     limits:
       cpu: 300m
-      memory: 600Mi
+      memory: 1Gi
     requests:
       cpu: 300m
-      memory: 600Mi
+      memory: 1Gi
   enableAdminAPI: false
