upgrade cert-manager + add resource confs

--- a/k8s/cert-manager/cert-manager/helm/default.yaml
+++ b/k8s/cert-manager/cert-manager/helm/default.yaml
@@ -162,13 +162,10 @@ extraEnv: []
 # - name: SOME_VAR
 #   value: 'some value'
 
-resources:
-  limits:
-    cpu: 100m
-    memory: 64Mi
-  requests:
-    cpu: 10m
-    memory: 32Mi
+resources: {}
+  # requests:
+  #   cpu: 10m
+  #   memory: 32Mi
 
 # Pod Security Context
 # ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/
