add port name for selector

--- a/k8s/grafana/grafana/deployment.yaml
+++ b/k8s/grafana/grafana/deployment.yaml
@@ -41,6 +41,7 @@ spec:
         name: grafana
         ports:
         - containerPort: 3000
+          name: http-port
         readinessProbe:
           failureThreshold: 3
           httpGet:
