--- a/ansible/inventory/homelab/hosts.yaml
+++ b/ansible/inventory/homelab/hosts.yaml
@@ -6,6 +6,9 @@ all:
     rpi02:
       ansible_host: 192.168.0.196
       ip: 192.168.0.196
+    rpi03:
+      ansible_host: 192.168.0.249
+      ip: 192.168.0.249
   children:
     kube_control_plane:
       hosts:
@@ -15,6 +18,7 @@ all:
       hosts:
         rpi01:
         rpi02:
+        rpi03:
     etcd:
       hosts:
         rpi01:
