--- a/k8s/longhorn-system/longhorn/helm/values.yaml
+++ b/k8s/longhorn-system/longhorn/helm/values.yaml
@@ -190,7 +190,8 @@ longhornManager:
   #   operator: "Equal"
   #   value: "value"
   #   effect: "NoSchedule"
-  nodeSelector: {}
+  nodeSelector:
+    kubernetes.io/hostname: rpi03
   ## If you want to set node selector for Longhorn Manager DaemonSet, delete the `{}` in the line above
   ## and uncomment this example block
   #  label-key1: "label-value1"
