remove all PVC related resources

--- a/k8s/monitoring/prometheus/kustomization.yaml
+++ b/k8s/monitoring/prometheus/kustomization.yaml
@@ -5,7 +5,7 @@ commonLabels:
 
 resources:
 - ingress.yaml
-- prometheus.yaml
+# - prometheus.yaml
 - rbac.yaml
 - service.yaml
 - servicemonitor.yaml
