--- a/k8s/grafana/grafana/kustomization.yaml
+++ b/k8s/grafana/grafana/kustomization.yaml
@@ -4,13 +4,13 @@ commonLabels:
   app.kubernetes.io/name: grafana
   app.zb/name: grafana
 
-resources:
-- sealed-secret.yaml
-- rbac.yaml
-- deployment.yaml
-- ingress.yaml
-- pvc.yaml
-- service.yaml
+resources: []
+# - sealed-secret.yaml
+# - rbac.yaml
+# - deployment.yaml
+# - ingress.yaml
+# - pvc.yaml
+# - service.yaml
 
 images:
   - name: grafana
