update mnt path and deploy longhorn

--- a/k8s/longhorn-system/longhorn/helm/values.yaml
+++ b/k8s/longhorn-system/longhorn/helm/values.yaml
@@ -118,7 +118,7 @@ defaultSettings:
   backupTargetCredentialSecret: ~
   allowRecurringJobWhileVolumeDetached: ~
   createDefaultDiskLabeledNodes: ~
-  defaultDataPath: /mnt/usb01/longhorn
+  defaultDataPath: /mnt/usb01
   defaultDataLocality: ~
   replicaSoftAntiAffinity: ~
   replicaAutoBalance: ~
