--- a/k8s/longhorn-system/longhorn/generated.yaml
+++ b/k8s/longhorn-system/longhorn/generated.yaml
@@ -81,6 +81,7 @@ data:
       fromBackup: ""
       fsType: "ext4"
       dataLocality: "disabled"
+      nodeSelector: "map[kubernetes.io/hostname:rpi03]"
 ---
 # Source: longhorn/templates/crds.yaml
 apiVersion: apiextensions.k8s.io/v1
