--- a/k8s/longhorn-system/longhorn/helm/values.yaml
+++ b/k8s/longhorn-system/longhorn/helm/values.yaml
@@ -94,8 +94,7 @@ persistence:
     expectedChecksum: ~
   defaultNodeSelector:
     enable: true # disable by default
-    selector:
-      kubernetes.io/hostname: rpi03
+    selector: ""
   removeSnapshotsDuringFilesystemTrim: ignored # "enabled" or "disabled" otherwise
 
 helmPreUpgradeCheckerJob:
@@ -227,7 +226,7 @@ longhornUI:
   #  label-key2: "label-value2"
 
 longhornConversionWebhook:
-  replicas: 1
+  replicas: 0
   priorityClass: ~
   tolerations: []
   ## If you want to set tolerations for Longhorn conversion webhook Deployment, delete the `[]` in the line above
@@ -243,7 +242,7 @@ longhornConversionWebhook:
   #  label-key2: "label-value2"
 
 longhornAdmissionWebhook:
-  replicas: 1
+  replicas: 0
   priorityClass: ~
   tolerations: []
   ## If you want to set tolerations for Longhorn admission webhook Deployment, delete the `[]` in the line above
