--- a/k8s/longhorn-system/longhorn/generated.yaml
+++ b/k8s/longhorn-system/longhorn/generated.yaml
@@ -81,7 +81,7 @@ data:
       fromBackup: ""
       fsType: "ext4"
       dataLocality: "disabled"
-      nodeSelector: "map[kubernetes.io/hostname:rpi03]"
+      nodeSelector: ""
 ---
 # Source: longhorn/templates/crds.yaml
 apiVersion: apiextensions.k8s.io/v1
@@ -4262,7 +4262,7 @@ metadata:
   name: longhorn-conversion-webhook
   namespace: longhorn-system
 spec:
-  replicas: 1
+  replicas: 0
   selector:
     matchLabels:
       app: longhorn-conversion-webhook
@@ -4326,7 +4326,7 @@ metadata:
   name: longhorn-admission-webhook
   namespace: longhorn-system
 spec:
-  replicas: 1
+  replicas: 0
   selector:
     matchLabels:
       app: longhorn-admission-webhook
