re-vamp default.yaml longhorn v1.5.3

--- a/ansible/inventory/homelab/homelab.ini
+++ b/ansible/inventory/homelab/homelab.ini
@@ -1,6 +1,6 @@
 rpi01 ansible_host=192.168.0.178 ip=192.168.0.178
 rpi02 ansible_host=192.168.0.196 ip=192.168.0.196
-rpi03 ansible_host=192.168.0.249 ip=192.168.0.249
+rpi03 ansible_host=192.168.0.249 ip=192.168.0.249 node_labels={"node-role.kubernetes.io/worker": "", "node.longhorn.io/create-default-disk": "true"}
 
 [kube_control_plane]
 rpi01
@@ -21,5 +21,5 @@ kube_node
 [calico_rr]
 
 # my custom groups
-[external_storage]
+[storage_node]
 rpi03
